Contacts: Implemented Login functionality

--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_LoginPartial.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_LoginPartial.cshtml
@@ -1,9 +1,11 @@
-﻿@*
-    @inject SignInManager<>
-    @inject UserManager<>
-*@
+﻿@using Contacts.Data.Entities
+@using Microsoft.AspNetCore.Identity
 
-@*
+@inject SignInManager<ApplicationUser> SignInManager;
+@inject UserManager<ApplicationUser> UserManager;
+
+
+
 <ul class="navbar-nav">
     @if (SignInManager.IsSignedIn(User))
     {
@@ -18,12 +20,12 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
         </li>
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a>
-        </li>
+        </li>*@
     }
 </ul>
-*@
+
 
 @*
     USE THIS CODE IF YOU ARE SCAFFOLDING IDENTITY
