Contacts: Implemented Login functionality

--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_LoginPartial.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_LoginPartial.cshtml
@@ -20,9 +20,9 @@
         <li class="nav-item">
             <a class="nav-link text-dark" asp-controller="User" asp-action="Register">Register</a>
         </li>
-        @*<li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="User" asp-action="Login">Login</a>
-        </li>*@
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-controller="user" asp-action="Login">Login</a>
+        </li>
     }
 </ul>
 
