--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/User/Login.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/User/Login.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model LoginViewModel
+
+@{
     ViewData["Title"] = "Log in";
 }
 
-@*
+
 <h1 class="text-center">@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-4 offset-md-4">
@@ -27,4 +29,3 @@
         </section>
     </div>
 </div>
-*@
