--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_Layout.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_Layout.cshtml
@@ -18,10 +18,21 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        @if (User?.Identity?.IsAuthenticated ?? false)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="All">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Add">Add a Contact</a>
+                            </li>
+                        }
+                        else
+                        {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
-
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
