Contacts: Implemented editing a contact by user functionality

--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Contacts/Edit.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Contacts/Edit.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model ContactViewModel
+
+@{
     ViewBag.Title = "Edit a Contact";
 }
 
-@*
+
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -50,4 +52,3 @@
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
-*@
