--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Contacts/All.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Contacts/All.cshtml
@@ -35,12 +35,12 @@
                     <td>@contact.Website</td>
                     <td>
                         <span style="float:left">
-                            <form class="input-group-sm" asp-controller="Contacts" asp-action="AddToTeam" asp-route-contactId="@contact.ContactId">
+                            <form class="input-group-sm" asp-controller="Contacts" asp-action="AddToTeam" asp-route-contactId="@contact.Id">
                                 <input type="submit" value="Add to Team" class="fs-6 btn btn-success mb-3 p-2" />
                             </form>
                         </span>
                         <span style="float:right">
-                            <a asp-controller="Contacts" asp-action="Edit" asp-route-contactId="@contact.ContactId" class="btn btn-primary">Edit</a>
+                            <a asp-controller="Contacts" asp-action="Edit" asp-route-id="@contact.Id" class="btn btn-primary">Edit</a>
                         </span>
                     </td>
                 </tr>
