--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_Layout.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Shared/_Layout.cshtml
@@ -26,6 +26,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Add">Add a Contact</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Contacts" asp-action="Team">My Team</a>
+                            </li>
                         }
                         else
                         {
