--- a/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Contacts/Team.cshtml
+++ b/Exam Projects/01. 21 December 2022 - Contacts/Contacts/Views/Contacts/Team.cshtml
@@ -34,7 +34,7 @@
                     <td>@contact.Website</td>
                     <td>
                         <span style="float:left">
-                            <form class="input-group-sm" asp-controller="Contacts" asp-action="RemoveFromTeam" asp-route-id="@contact.Id">
+                            <form class="input-group-sm" asp-controller="Contacts" asp-action="RemoveFromTeam" asp-route-contactId="@contact.Id">
                                 <input type="submit" value="Remove from Team" class="fs-6 btn btn-success mb-3 p-2" />
                             </form>
                         </span>
