HouseRenting: Added methods and models for the House controller.

--- a/WebProject - House Renting System/HouseRentingSystem/Views/House/Mine.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/House/Mine.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HouseQueryModel
 
 @{
-    ViewBag.Title = "All Houses";
+    ViewBag.Title = "My Houses";
 }
 
 <h2 class="text-center">@ViewBag.Title</h2>
