--- a/WebProject - House Renting System/HouseRentingSystem/Views/House/All.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/House/All.cshtml
@@ -51,7 +51,7 @@
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
         <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" :
 string.Empty)"
-           asp-controller="Houses"
+           asp-controller="House"
            asp-action="All"
            asp-route-currentPage="@previousPage"
            asp-route-category="@Model.Category"
@@ -65,7 +65,7 @@ string.Empty)"
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
         <a class="btn btn-primary
 @(shouldButtonBeDisabled ? "disabled" : string.Empty)"
-           asp-controller="Houses"
+           asp-controller="House"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
            asp-route-category="@Model.Category"
