--- a/WebProject - House Renting System/HouseRentingSystem/Views/House/All.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/House/All.cshtml
@@ -49,8 +49,7 @@
 }
 <div class="row mb-5">
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" :
-string.Empty)"
+        <a class="btn btn-primary @(Model.CurrentPage == 1 ? "disabled" : string.Empty)"
            asp-controller="House"
            asp-action="All"
            asp-route-currentPage="@previousPage"
@@ -63,8 +62,7 @@ string.Empty)"
         !Model.Houses.Any();
     }
     <div class="col-md-6 d-grid gap-2 d-md-flex justify-content-md-end">
-        <a class="btn btn-primary
-@(shouldButtonBeDisabled ? "disabled" : string.Empty)"
+        <a class="btn btn-primary @(shouldButtonBeDisabled ? "disabled" : string.Empty)"
            asp-controller="House"
            asp-action="All"
            asp-route-currentPage="@(Model.CurrentPage + 1)"
