--- a/WebProject - House Renting System/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -14,22 +14,18 @@
             <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" class="btn btn-success">Details</a>
             @if (this.User.Identity.IsAuthenticated)
             {
-                <a asp-controller="House" asp-action="Edit" asp-routeid="@Model.Id"
-               class="btn btn-warning">Edit</a>
-                <a asp-controller="House" asp-action="Delete" asp-routeid="@Model.Id"
-               class="btn btn-danger">Delete</a>
+                <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+                <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
                 <p></p>
                 @if (!Model.IsRented)
                 {
-                    <form class="input-group-sm" asp-controller="House"
-                  asp-action="Rent" asp-route-id="@Model.Id" method="post">
+                    <form class="input-group-sm" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Rent" />
                     </form>
                 }
                 else
                 {
-                    <form asp-controller="House" asp-action="Leave"
-                  asp-route-id="@Model.Id" method="post">
+                    <form asp-controller="House" asp-action="Leave" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Leave" />
                     </form>
                 }
