--- a/WebProject - House Renting System/HouseRentingSystem/Views/Home/Index.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/Home/Index.cshtml
@@ -25,6 +25,8 @@
 
 <div class="mb-5"></div>
 
+
+
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
         @foreach (var house in Model)
@@ -51,3 +53,32 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
     </button>
+</div>
+
+<div class="row">
+    <div class="col-12 text-center">
+        <button class="btn btn-primary" id="statistics-button">
+            Show Statistics
+        </button>
+    </div>
+</div>
+
+<div class="mt-4 p-5 bg-light d-none" id="statistics">
+    <div class="row">
+        <h2 class="col-md-6 text-center" id="total-houses"></h2>
+        <h2 class="col-md-6 text-center" id="total-rents"></h2>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        $('#statistics-button').on('click', ev => {
+            $.get('/api/statistics', (data) => {
+                $('#total-houses').text(data.totalHouses + " Houses");
+                $('#total-rents').text(data.totalRents + " Rents");
+                $('#statistics').removeClass('d-none');
+                $('#statistics-button').hide();
+            })
+        })
+    </script>
+}
