HouseRenting: Added some URL protection

--- a/WebProject - House Renting System/HouseRentingSystem/Views/House/Details.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/House/Details.cshtml
@@ -23,10 +23,8 @@
             <div class="form-inline">
                 @if (this.User?.Identity?.IsAuthenticated ?? false)
                 {
-                    <a class="btn btn-warning" asp-controller="House" aspaction="Edit"
-                   asp-route-id="@Model.Id">Edit</a>
-                    <a class="ml-2 btn btn-danger" asp-controller="House" aspaction="Delete"
-                   asp-route-id="@Model.Id">Delete</a>
+                    <a class="btn btn-warning" asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+                    <a class="ml-2 btn btn-danger" asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
                     @if (!Model.IsRented)
                     {
                         <form class="ml-2" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id"
