--- a/WebProject - House Renting System/HouseRentingSystem/Views/Home/Index.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/Home/Index.cshtml
@@ -37,7 +37,7 @@
                  src="@house.ImageUrl" alt="@house.Title">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>
-                        <a class="btn btn-primary" asp-controller="House" asp-action="Details" asp-route-id="@house.Id"> @house.Title</a>
+                        <a class="btn btn-primary" asp-controller="House" asp-action="Details" asp-route-id="@house.Id" asp-route-information="@house.GetInformation()"> @house.Title</a>
                     </h5>
                 </div>
             </div>
