--- a/WebProject - House Renting System/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -1,4 +1,7 @@
-﻿@model HouseServiceModel
+﻿@inject IHouseService houses
+@inject IAgentService agents
+
+@model HouseServiceModel
 <div class="col-md-4">
     <div class="card mb-3">
         <img class="card-img-top" src="@Model.ImageUrl" alt="House Image">
@@ -14,16 +17,19 @@
             <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" asp-route-information="@Model.GetInformation()" class="btn btn-success">Details</a>
             @if (this.User?.Identity?.IsAuthenticated ?? false)
             {
-                <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
-                <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+                @if (await houses.HasAgentWithId(Model.Id, User.Id()))
+                {
+                    <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
+                    <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
+                }
                 <p></p>
-                @if (!Model.IsRented)
+                @if (!Model.IsRented && await agents.ExistsById(User.Id()))
                 {
                     <form class="input-group-sm" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Rent" />
                     </form>
                 }
-                else
+                else if (await houses.IsRentedByUserWithId(Model.Id, User.Id()))
                 {
                     <form asp-controller="House" asp-action="Leave" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Leave" />
