--- a/WebProject - House Renting System/HouseRentingSystem/Views/_ViewImports.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using HouseRentingSystem.Core.Models.House
 @using HouseRentingSystem.Core.Models.Agent
 @using HouseRentingSystem.Extensions;
+@using HouseRentingSystem.Core.Services;
+@using HouseRentingSystem.Core.Contracts;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
