HouseRenting: Added and configured custom User.

--- a/WebProject - House Renting System/HouseRentingSystem/Views/_ViewImports.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/_ViewImports.cshtml
@@ -2,6 +2,7 @@
 @using HouseRentingSystem.Models
 @using HouseRentingSystem.Core.Models.House
 @using HouseRentingSystem.Core.Models.Agent
+@using HouseRentingSystem.Infrastructure.Data;
 @using HouseRentingSystem.Extensions;
 @using HouseRentingSystem.Core.Services;
 @using HouseRentingSystem.Core.Contracts;
