HouseRenting: Modified Admin access across the app.

--- a/WebProject - House Renting System/HouseRentingSystem/Views/House/Details.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/House/Details.cshtml
@@ -26,12 +26,14 @@
             <div class="form-inline">
                 @if (this.User?.Identity?.IsAuthenticated ?? false)
                 {
-                    @if (await agents.ExistsById(User.Id()))
+                    @if (await agents.ExistsById(User.Id())
+                    || User.IsAdmin())
                     {
                         <a class="btn btn-warning" asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
                         <a class="ml-2 btn btn-danger" asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id">Delete</a>
                     }
-                    @if (!Model.IsRented && !await agents.ExistsById(User.Id()))
+                    @if ((!Model.IsRented && !await agents.ExistsById(User.Id()))
+                    || User.IsAdmin())
                     {
                         <form class="ml-2" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id" method="post">
                             <input class="btn btn-primary" type="submit" value="Rent" />
