--- a/WebProject - House Renting System/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
+++ b/WebProject - House Renting System/HouseRentingSystem/Views/Shared/_HousePartial.cshtml
@@ -17,13 +17,15 @@
             <a asp-controller="House" asp-action="Details" asp-route-id="@Model.Id" asp-route-information="@Model.GetInformation()" class="btn btn-success">Details</a>
             @if (this.User?.Identity?.IsAuthenticated ?? false)
             {
-                @if (await houses.HasAgentWithId(Model.Id, User.Id()))
+                @if (await houses.HasAgentWithId(Model.Id, User.Id())
+               || User.IsAdmin())
                 {
                     <a asp-controller="House" asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Edit</a>
                     <a asp-controller="House" asp-action="Delete" asp-route-id="@Model.Id" class="btn btn-danger">Delete</a>
                 }
                 <p></p>
-                @if (!Model.IsRented && await agents.ExistsById(User.Id()))
+                @if ((!Model.IsRented && !await agents.ExistsById(User.Id()))
+               || (!Model.IsRented && User.IsAdmin()))
                 {
                     <form class="input-group-sm" asp-controller="House" asp-action="Rent" asp-route-id="@Model.Id" method="post">
                         <input class="btn btn-primary" type="submit" value="Rent" />
